--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mempal",
   "version": "1.0.0",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "electron": "^33.2.1",
     "neo4j-driver": "^5.27.0",
     "react": "^19.0.0",
